[package]
name = "advent_of_code_2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
indoc = "1.0.3"
regex = "1.4.2"
serde_scan = "0.4.1"
rayon = "1.5.0"
aoc_helper = { git = "https://github.com/IceSentry/aoc_helper.git" }
serde = "1.0.130"
serde_derive = "1.0.130"
colored = "2.0.0"
anyhow = "1.0.51"
